@@ -3,6 +3,8 @@ FLSAM ChangeLog
 <Time in future> v 0.42
  * Added method for plotting FLSAMs.
  * Added method for plotting FLSAM/FLSAMs together with a single FLStock
+ * Added method for plotting two FLSAM objects in one command
+ * Passed ... option to plotting methods, allowing for customisation of plots
 
 2012-01-30 v 0.41
  * Increased SAM timeout to 7200s (120 mins)
